[package]
name = "rfnet-core"
version = "0.1.0"
authors = ["Val Vanderschaegen <valere.vanderschaegen@gmail.com>"]

[dependencies]
log = "0.4.1"
byteorder = "1.2.1"
reed-solomon = "0.2.1"
hyper = "0.11.18"
futures = "0.1.17"
rand = "0.4.2"
rust_sodium = "0.8.0"
base64 = "0.9.0"

[dev-dependencies]
simple_logger = "*"