[package]
name = "rfnet-web"
version = "0.1.0"
authors = ["Val Vanderschaegen <valere.vanderschaegen@gmail.com>"]

[dependencies]
rfnet-core = { path = "../rfnet-core" }
log = "0.4.1"
iron = "0.6.0"
router = "0.6.0"
staticfile = "0.5.0"
websocket = "0.20.2"
serde = "1.0.27"
serde_json = "1.0.9"
serde_derive = "1.0.27"