[package]
name = "rfnet_sign"
version = "0.1.0"
authors = ["Val Vanderschaegen <valere.vanderschaegen@gmail.com>"]

[dependencies]
rfnet-core = { path = "../../../rfnet-core" }
futures = "0.1.21"
hyper = "0.11.25"
serde = "1.0.27"
serde_json = "1.0.9"
serde_derive = "1.0.27"
base64 = "0.9.0"
rust_sodium = "0.8.0"

[workspace]